@@ -1,0 +1,38 @@
+
+.. include:: ./substitutions.rst
+
+ampycloud |version| |stars| |watch|
+===================================
+
+|copyright| |license| |github| |pypi| |last-commit| |issues|
+
+.. todo::
+
+    Tags for the latest pypi release and associated DOI should be added when releasing the code
+    for the first time. These should also be added to the :ref:`acknowledge:Acknowledging ampycloud`
+    page.
+
+**Welcome to the ampycloud documentation !**
+
+WIP.
+
+ampycloud is being developed on Github, where you can submit all your
+`questions <https://github.com/MeteoSwiss/ampycloud/discussions>`_ and
+`bug reports <https://github.com/MeteoSwiss/ampycloud/issues>`_. Contributions via pull requests are
+also welcome. See :ref:`troubleshooting:Troubleshooting` for more details.
+
+**Table of contents:**
+
+.. toctree::
+    :maxdepth: 1
+
+    Home <self>
+    installation
+    troubleshooting
+    acknowledge
+    license
+    changelog
+    Contributing <https://github.com/MeteoSwiss/ampycloud/blob/develop/CONTRIBUTING.md>
+    Github repository <https://github.com/MeteoSwiss/ampycloud>
+    modules
+    doc_todo
