@@ -1,0 +1,18 @@
+ampycloud package
+=================
+
+.. automodule:: ampycloud
+   :members:
+   :undoc-members:
+   :show-inheritance:
+
+Submodules
+----------
+
+ampycloud.version module
+------------------------
+
+.. automodule:: ampycloud.version
+   :members:
+   :undoc-members:
+   :show-inheritance:
