@@ -1,0 +1,24 @@
+
+.. |last-commit| image:: https://img.shields.io/github/last-commit/MeteoSwiss/ampycloud.svg?colorB=e6c000
+   :target: https://github.com/MeteoSwiss/ampycloud
+
+.. |issues| image:: https://img.shields.io/github/issues/MeteoSwiss/ampycloud.svg?colorB=b4001e
+   :target: https://github.com/MeteoSwiss/ampycloud/issues
+
+.. |stars| image:: https://img.shields.io/github/stars/MeteoSwiss/ampycloud.svg?style=social&label=Stars
+   :target: https://github.com/MeteoSwiss/ampycloud
+
+.. |watch| image:: https://img.shields.io/github/watchers/MeteoSwiss/ampycloud.svg?style=social&label=Watch
+   :target: https://github.com/MeteoSwiss/ampycloud
+
+.. |license| image:: https://img.shields.io/badge/License-BSD--3--Clause-black
+   :target: https://opensource.org/licenses/BSD-3-Clause
+
+.. |github| image:: https://img.shields.io/github/release/MeteoSwiss/ampycloud.svg
+    :target: https://github.com/MeteoSwiss/ampycloud/releases
+
+.. |pypi| image:: https://img.shields.io/pypi/v/ampycloud.svg?colorB=<brightgreen>
+    :target: https://pypi.python.org/pypi/ampycloud/
+
+.. |copyright| image:: https://img.shields.io/badge/MeteoSwiss-%C2%A9_2021-black?logo=data%3Aimage%2Fsvg%2Bxml%3Bbase64%2CPHN2ZyAgIHhtbG5zOmRjPSJodHRwOi8vcHVybC5vcmcvZGMvZWxlbWVudHMvMS4xLyIgICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIiAgIHhtbG5zOnJkZj0iaHR0cDovL3d3dy53My5vcmcvMTk5OS8wMi8yMi1yZGYtc3ludGF4LW5zIyIgICB4bWxuczpzdmc9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgICB4bWxuczpzb2RpcG9kaT0iaHR0cDovL3NvZGlwb2RpLnNvdXJjZWZvcmdlLm5ldC9EVEQvc29kaXBvZGktMC5kdGQiICAgeG1sbnM6aW5rc2NhcGU9Imh0dHA6Ly93d3cuaW5rc2NhcGUub3JnL25hbWVzcGFjZXMvaW5rc2NhcGUiICAgd2lkdGg9Ijc3LjI2Njk5OHB0IiAgIGhlaWdodD0iODUuNTQ1NDcxcHQiICAgdmlld0JveD0iMCAwIDc3LjI2Njk5NCA4NS41NDU0NzMiICAgdmVyc2lvbj0iMS4yIiAgIGlkPSJzdmcyODciICAgc29kaXBvZGk6ZG9jbmFtZT0iU2hpZWxkX3JnYl9wb3NfRU4uc3ZnIiAgIGlua3NjYXBlOnZlcnNpb249IjAuOTIuMiA1YzNlODBkLCAyMDE3LTA4LTA2IiAgIGlua3NjYXBlOmV4cG9ydC1maWxlbmFtZT0iL1VzZXJzL2Z2b2d0L1Byb2plY3RzL2N1cnJlbnQvTUNIL1NFVC9TaGllbGRfcmdiX3Bvc19FTi5wbmciICAgaW5rc2NhcGU6ZXhwb3J0LXhkcGk9IjI5OTkuNjY3NyIgICBpbmtzY2FwZTpleHBvcnQteWRwaT0iMjk5OS42Njc3Ij4gIDxtZXRhZGF0YSAgICAgaWQ9Im1ldGFkYXRhMjkxIj4gICAgPHJkZjpSREY+ICAgICAgPGNjOldvcmsgICAgICAgICByZGY6YWJvdXQ9IiI+ICAgICAgICA8ZGM6Zm9ybWF0PmltYWdlL3N2Zyt4bWw8L2RjOmZvcm1hdD4gICAgICAgIDxkYzp0eXBlICAgICAgICAgICByZGY6cmVzb3VyY2U9Imh0dHA6Ly9wdXJsLm9yZy9kYy9kY21pdHlwZS9TdGlsbEltYWdlIiAvPiAgICAgICAgPGRjOnRpdGxlPjwvZGM6dGl0bGU+ICAgICAgPC9jYzpXb3JrPiAgICA8L3JkZjpSREY+ICA8L21ldGFkYXRhPiAgPHNvZGlwb2RpOm5hbWVkdmlldyAgICAgcGFnZWNvbG9yPSIjZmZmZmZmIiAgICAgYm9yZGVyY29sb3I9IiM2NjY2NjYiICAgICBib3JkZXJvcGFjaXR5PSIxIiAgICAgb2JqZWN0dG9sZXJhbmNlPSIxMCIgICAgIGdyaWR0b2xlcmFuY2U9IjEwIiAgICAgZ3VpZGV0b2xlcmFuY2U9IjEwIiAgICAgaW5rc2NhcGU6cGFnZW9wYWNpdHk9IjAiICAgICBpbmtzY2FwZTpwYWdlc2hhZG93PSIyIiAgICAgaW5rc2NhcGU6d2luZG93LXdpZHRoPSIxMzMyIiAgICAgaW5rc2NhcGU6d2luZG93LWhlaWdodD0iNzkwIiAgICAgaWQ9Im5hbWVkdmlldzI4OSIgICAgIHNob3dncmlkPSJmYWxzZSIgICAgIGZpdC1tYXJnaW4tdG9wPSIwIiAgICAgZml0LW1hcmdpbi1sZWZ0PSIwIiAgICAgZml0LW1hcmdpbi1yaWdodD0iMCIgICAgIGZpdC1tYXJnaW4tYm90dG9tPSIwIiAgICAgaW5rc2NhcGU6em9vbT0iMi4yMDMwNTA3IiAgICAgaW5rc2NhcGU6Y3g9IjEzNS42OTUzMyIgICAgIGlua3NjYXBlOmN5PSIyNi4yMjE0NDQiICAgICBpbmtzY2FwZTp3aW5kb3cteD0iNDkiICAgICBpbmtzY2FwZTp3aW5kb3cteT0iMTIiICAgICBpbmtzY2FwZTp3aW5kb3ctbWF4aW1pemVkPSIwIiAgICAgaW5rc2NhcGU6Y3VycmVudC1sYXllcj0ic3ZnMjg3IiAgICAgaW5rc2NhcGU6bWVhc3VyZS1zdGFydD0iMCwwIiAgICAgaW5rc2NhcGU6bWVhc3VyZS1lbmQ9IjAsMCIgLz4gIDxkZWZzICAgICBpZD0iZGVmczM4Ij4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwMSI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDE1MywyIGggMi45ODgyOCBWIDggSCAxNTMgWiBtIDAsMCIgICAgICAgICBpZD0icGF0aDIiICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwMiI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDI5LDUzIGggNCB2IDYuMDUwNzgxIGggLTQgeiBtIDAsMCIgICAgICAgICBpZD0icGF0aDUiICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwMyI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDQyLDU1IGggNCB2IDQuMDUwNzgxIGggLTQgeiBtIDAsMCIgICAgICAgICBpZD0icGF0aDgiICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwNCI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDQ2LDU1IGggMyB2IDQuMDUwNzgxIGggLTMgeiBtIDAsMCIgICAgICAgICBpZD0icGF0aDExIiAgICAgICAgIGlua3NjYXBlOmNvbm5lY3Rvci1jdXJ2YXR1cmU9IjAiIC8+ICAgIDwvY2xpcFBhdGg+ICAgIDxjbGlwUGF0aCAgICAgICBpZD0iY2xpcDUiPiAgICAgIDxwYXRoICAgICAgICAgZD0ibSA1Miw1MyBoIDUgdiA2LjA1MDc4MSBoIC01IHogbSAwLDAiICAgICAgICAgaWQ9InBhdGgxNCIgICAgICAgICBpbmtzY2FwZTpjb25uZWN0b3ItY3VydmF0dXJlPSIwIiAvPiAgICA8L2NsaXBQYXRoPiAgICA8Y2xpcFBhdGggICAgICAgaWQ9ImNsaXA2Ij4gICAgICA8cGF0aCAgICAgICAgIGQ9Im0gNTcsNTUgaCA1IHYgNC4wNTA3ODEgaCAtNSB6IG0gMCwwIiAgICAgICAgIGlkPSJwYXRoMTciICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwNyI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDcwLDU1IGggNCB2IDQuMDUwNzgxIGggLTQgeiBtIDAsMCIgICAgICAgICBpZD0icGF0aDIwIiAgICAgICAgIGlua3NjYXBlOmNvbm5lY3Rvci1jdXJ2YXR1cmU9IjAiIC8+ICAgIDwvY2xpcFBhdGg+ICAgIDxjbGlwUGF0aCAgICAgICBpZD0iY2xpcDgiPiAgICAgIDxwYXRoICAgICAgICAgZD0ibSA3NCw1MyBoIDUgdiA2LjA1MDc4MSBoIC01IHogbSAwLDAiICAgICAgICAgaWQ9InBhdGgyMyIgICAgICAgICBpbmtzY2FwZTpjb25uZWN0b3ItY3VydmF0dXJlPSIwIiAvPiAgICA8L2NsaXBQYXRoPiAgICA8Y2xpcFBhdGggICAgICAgaWQ9ImNsaXA5Ij4gICAgICA8cGF0aCAgICAgICAgIGQ9Im0gNzksNTUgaCA0IHYgNC4wNTA3ODEgaCAtNCB6IG0gMCwwIiAgICAgICAgIGlkPSJwYXRoMjYiICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gICAgPGNsaXBQYXRoICAgICAgIGlkPSJjbGlwMTAiPiAgICAgIDxwYXRoICAgICAgICAgZD0ibSA4Nyw1NSBoIDQgdiA0LjA1MDc4MSBoIC00IHogbSAwLDAiICAgICAgICAgaWQ9InBhdGgyOSIgICAgICAgICBpbmtzY2FwZTpjb25uZWN0b3ItY3VydmF0dXJlPSIwIiAvPiAgICA8L2NsaXBQYXRoPiAgICA8Y2xpcFBhdGggICAgICAgaWQ9ImNsaXAxMSI+ICAgICAgPHBhdGggICAgICAgICBkPSJtIDkxLDU0IGggMyB2IDUuMDUwNzgxIGggLTMgeiBtIDAsMCIgICAgICAgICBpZD0icGF0aDMyIiAgICAgICAgIGlua3NjYXBlOmNvbm5lY3Rvci1jdXJ2YXR1cmU9IjAiIC8+ICAgIDwvY2xpcFBhdGg+ICAgIDxjbGlwUGF0aCAgICAgICBpZD0iY2xpcDEyIj4gICAgICA8cGF0aCAgICAgICAgIGQ9Im0gOTYsNTUgaCA1IHYgNC4wNTA3ODEgaCAtNSB6IG0gMCwwIiAgICAgICAgIGlkPSJwYXRoMzUiICAgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPC9jbGlwUGF0aD4gIDwvZGVmcz4gIDxnICAgICBpZD0iZzQzNyIgICAgIHRyYW5zZm9ybT0ic2NhbGUoMy42MjY5NjkzKSI+ICAgIDxwYXRoICAgICAgIHN0eWxlPSJmaWxsOiNlYjIxMmI7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiICAgICAgIGQ9Ik0gMjEuMjY2OTY1LDEuNzM4MjgxOCBDIDIxLjI2Njk2NSwxLjczODI4MTggMTcuMjk4MjE1LDAgMTAuNjUzNjg0LDAgNC4wMDkxNTE5LDAgMC4wMzY0OTYwNywxLjczODI4MTggMC4wMzY0OTYwNywxLjczODI4MTggYyAwLDAgLTAuMzU1NDY4Miw3LjY5NTMxMiAxLjE1MjM0MzgzLDEyLjA0Njg3NDIgMi42NjAxNTYsNy42NTIzNDQgOS40NjA5MzgxLDkuODAwNzgyIDkuNDYwOTM4MSw5LjgwMDc4MiBoIDAuMDAzOSBjIDAsMCA2LjgwMDc4MSwtMi4xNDg0MzggOS40NjA5MzcsLTkuODAwNzgyIDEuNTA3ODE5LC00LjM1MTU2MjIgMS4xNTIzNSwtMTIuMDQ2ODc0MyAxLjE1MjM1LC0xMi4wNDY4NzQzIiAgICAgICBpZD0icGF0aDI4MiIgICAgICAgaW5rc2NhcGU6Y29ubmVjdG9yLWN1cnZhdHVyZT0iMCIgLz4gICAgPHBhdGggICAgICAgc3R5bGU9ImZpbGw6I2ZmZmZmZjtmaWxsLW9wYWNpdHk6MTtmaWxsLXJ1bGU6bm9uemVybztzdHJva2U6bm9uZSIgICAgICAgZD0iTSAxNy43MDgzNzEsOC4zNzQ5OTk4IFYgMTIuNjEzMjgyIEggMTIuNzU5MTUyIFYgMTcuNTYyNSBIIDguNTIwODcwOSBWIDEyLjYxMzI4MiBIIDMuNTcxNjUxOSBWIDguMzc0OTk5OCBoIDQuOTQ5MjE5IHYgLTQuOTQ5MjE4IGggNC4yMzgyODExIHYgNC45NDkyMTggaCA0Ljk0OTIxOSIgICAgICAgaWQ9InBhdGgyODQiICAgICAgIGlua3NjYXBlOmNvbm5lY3Rvci1jdXJ2YXR1cmU9IjAiIC8+ICA8L2c+PC9zdmc+
+   :target: https://www.meteoswiss.admin.ch
