@@ -1,0 +1,21 @@
+
+.. include:: ./substitutions.rst
+
+Troubleshooting
+---------------
+
+* If you encounter a **problem/bug** when running ampycloud:
+
+   1. Ensure that all the :ref:`required packages <installation:Requirements>` are up-to-date,
+      then try again.
+   2. Check if this is one of the known open |issues|. You can also check the fixed issues
+      `here <https://github.com/MeteoSwiss/ampycloud/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aclosed+>`_.
+   3. If you still can't figure out what's wrong, please `submit a new issue on the Github
+      repository of the project <https://github.com/MeteoSwiss/ampycloud/issues>`_. Provide as much
+      detail as possible (ampycloud version, error message, minimal example, operating system, Python
+      version, etc ...).
+
+* If you have a **question** about the code, its usage, or its results:
+
+   1. Take a look at the `ampycloud Github Discussions <https://github.com/MeteoSwiss/ampycloud/discussions>`_.
+      If your question hasn't yet been answered, go right ahead and open a new Thread.
