@@ -1,0 +1,12 @@
+.. include:: ./substitutions.rst
+
+Changelog
+=========
+
+|last-commit| |issues|
+
+The ampycloud changelog (reproduced below) is stored in the
+`code repository <https://github.com/MeteoSwiss/ampycloud>`_ on Github.
+
+.. literalinclude:: ../../CHANGELOG
+    :language: none
